# quantum_circuit_optimizer

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/docs/: REPO_WALKTHROUGH.md
.github/workflows/: docker-build.yml  docs.yml
docs/: BUILDING.md  auto-discovery.md  environments.md
docs/environments/: carla.md
docs/source/: auto_discovery.md  cli.md  conf.py  contributing-envs.md  core.md  environment-builder.md  environments.md  index.md
docs/tutorials/: openenv-tutorial.md
envs/browsergym_env/: pyproject.toml
envs/calendar_env/: client.py
envs/carla_env/: client.py  models.py  pyproject.toml
envs/chat_env/: models.py
envs/chess_env/: pyproject.toml
my_env/: DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_FIXES.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_READY.md  DEPLOYMENT_STATUS.md  Dockerfile  FINAL_CHECKLIST.md  QUICK_DEPLOY.md  README.md  TODO.md  TODO_inference.md  __init__.py  app.py  client.py  inference.py  models.py  openenv.yaml  out.txt  prompt.md  pyproject.toml  skills.md  test_1.py  test_compliance.py  test_diversity.py  test_everything.py  validate_deployment.py
my_env/graders/: __init__.py  aggregate.py  constraints.py  efficiency.py  fidelity.py  noise.py  unitary.py
my_env/openenv_my_env.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
my_env/openenv_quantum_circuit_opt.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
my_env/server/: __init__.py  app.py  my_env_environment.py  quantum_ui.html  requirements.txt  tasks.py
scripts/: manage_hf_collection.py  prepare_hf_deployment.sh  verify_private_spaces.py
(+107 files in other folders)
